# LEGION2

./: .gitignore  README.md  RESEARCH_REPORT.md  index.html  legion2.toml  package-lock.json  package.json  vite.config.js
app/: auxiliary.py
legacy-components/: legion.py
legacy-components/ui/models/: servicemodels.py
legacy-python/controller/: controller.py
legacy-scripts/python/: pyShodan.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  main.rs
src-tauri/src/database/: mod.rs  models.rs  operations.rs
src-tauri/src/scanning/: coordinator.rs  masscan.rs  mod.rs  nmap.rs
src-tauri/src/utils/: mod.rs  network.rs  parsing.rs  process.rs  validation.rs
src/components/: HostTable.tsx  ResultViewer.tsx  ScanProgress.tsx
src/stores/: hostStore.ts  scanStore.ts
src/types/: scanning.ts
ui/models/: hostmodels.py
